* Set logLambda=TRUE as default for plot.rq.pen.seq.cv()
* Fixed issue where SCAD and MCP penalties could fail for large values of lambda, even when n>p+1. New solution is to try quantreg:::rq(y~x,tau=tau) and if that fails then rq.group.pen() or rq.pen() stops early. 
* Updated bytau.plot() code to allow users to specify specific variables they want to plot.
* Updated rq.pen.cv.coefficients() to include names of variables as rownames. 


rqPen 3.1 (Release date: 2023-02-20)
=============
* fixed issues where rq.group.pen did not work with a single value of lambda
* Older functions that were deprecated in 3.0 are no longer exported. Big changes are rq.pen() should be used instead of rq.lasso.fit() or rq.nc.fit(). Similarly rq.group.pen() should be used instead of rq.group.fit(). Finally rq.pen.cv() and rq.group.pen.cv() should be used instead of cv.rq.pen() and cv.rq.group.pen().
* Fixed issue where length of lambda sequence could differ by quantile if lambda.discard=TRUE. Now it returns the minimum sequence used across all quantiles. Users not liking possible shortening of interesting lambda sequences should set lambda.discard=FALSE, but that will slow the functions down. 
* Updated cross-validation results to include one standard error when selecting tuning parameters that optimize across all quantiles. 
* plot.rq.pen.seq() var parameter now works. 

rqPen 3.0.1 (Release date: 2023-01-31)
=============
* Fixed mistake in help file of rq.pen.cv(). Thanks to Jing Lyu for noticing the typo. 
* Fixed issue where coefficients() function was not working correctly if there was only one value of lambda used. 
* Fixed issue where if y had class matrix rq.pen() and rq.group.pen() were not working. Solution is to switch y to a numeric vector if it is passed as a matrix. 
* Added vignette. 

rqPen 3.0 (Release date: 2022-08-09)
=============
Changes:
* Package now has elastic net penalty, adaptive lasso, group adaptive lasso and group lasso.  