@@ -2,16 +2,12 @@
 
 S3method(bytau.plot,rq.pen.seq)
 S3method(bytau.plot,rq.pen.seq.cv)
-S3method(coef,cv.rq.group.pen)
 S3method(coef,cv.rq.pen)
 S3method(coef,rq.pen.seq)
 S3method(coef,rq.pen.seq.cv)
-S3method(plot,cv.rq.group.pen)
 S3method(plot,rq.pen.seq)
 S3method(plot,rq.pen.seq.cv)
-S3method(predict,cv.rq.pen)
 S3method(predict,qic.select)
-S3method(predict,rq.pen)
 S3method(predict,rq.pen.seq)
 S3method(predict,rq.pen.seq.cv)
 S3method(print,cv.rq.pen)
@@ -21,20 +17,10 @@ S3method(print,rq.pen.seq)
 S3method(print,rq.pen.seq.cv)
 S3method(qic.select,rq.pen.seq)
 S3method(qic.select,rq.pen.seq.cv)
-export(QICD)
-export(QICD.nonpen)
-export(beta_plots)
 export(bytau.plot)
-export(cv.rq.group.pen)
-export(cv.rq.pen)
-export(cv_plots)
-export(qic)
 export(qic.select)
-export(rq.group.fit)
 export(rq.group.pen)
 export(rq.group.pen.cv)
-export(rq.lasso.fit)
-export(rq.nc.fit)
 export(rq.pen)
 export(rq.pen.cv)
 import(data.table)
